# armapp

./: .gitignore  README.md  armapp.lnk  localization.py  main.py  pyproject.toml
database/: __init__.py  crud.py  models.py
webapp/: __init__.py  forms.py  routes.py
webapp/static/js/: base.js
webapp/templates/web/: add.html  add_employee.html  base.html  index.html  view.html
